--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcsh 'Americans -- Mexico -- Juvenile fiction'
 - !lcsh 'Mystery fiction'
 - !lcsh 'Young women -- Juvenile fiction'
+- GITenberg
 title: 'The Mystery of Carlitos
 
   Mexican Mystery Stories #2'
